cluster/studentbee/api/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: studentbee-api
    component: api
    part-of: beehive
    project: exam.login.no
    confidentiality: not-defined
    compliance: not-defined
  name: studentbee-api
  namespace: studentbee
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  selector:
    matchLabels:
      app: studentbee-api
  template:
    metadata:
      labels:
        app: studentbee-api
        component: api
        part-of: beehive
        project: exam.login.no
        confidentiality: not-defined
        compliance: not-defined
    spec:
      imagePullSecrets:
        - name: gitlab-deploy-key-studentbee
      containers:
        - name: api
          image: registry.login.no/tekkom/web/beehive/exam.login.no/api:1.2.18-dev@sha256:3218a1be33171eedf865042200a422269c56945088529bcd6a47adfaf4d04917
          command:
            - npm
            - start
          ports:
            - containerPort: 8080
              name: 8080tcp
              protocol: TCP
          # livenessProbe:
          #   httpGet:
          #     path: /api/health
          #     port: 8080
          #   initialDelaySeconds: 10
          #   periodSeconds: 10
          # readinessProbe:
          #   httpGet:
          #     path: /api/
          #     port: 8080
          #   initialDelaySeconds: 30
          #   periodSeconds: 5
          resources:
            requests:
              memory: 128Mi
              cpu: 125m
            limits:
              memory: 512Mi
              cpu: 1000m
        - name: redis
          image: redis:7.4.1-alpine3.20@sha256:c1e88455c85225310bbea54816e9c3f4b5295815e6dbf80c34d40afc6df28275
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6379
              name: 6379tcp
              protocol: TCP
          resources:
            requests:
              memory: 128Mi
              cpu: 125m
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - nginx
              topologyKey: kubernetes.io/hostname
